recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:3: error: overloaded method value ^ with alternatives:
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Double)
    var newLength = length/(2^0.5)
                             ^