recursion.logo.lessons.recursion.logo.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
   if(levels>0){
    var newLength = length/(2^0.5)
    var nL = levels-1		// newLevel
    
     left(45)
     crab(nL,newLength)
     right(90)
     crab(nL,newLength)
     left(45)
    
    
  }else if(levels==0){
    avance(length)
  }
}